<resources>
    <string name="app_name">Restaurante</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="cerveza">Cerveza Weihenstephan Vitus</string>
    <string name="icons_allergens">icons_allergens</string>
    <string name="plate_image">plate_image</string>
    <string name="default_plate_image">deafault_plate_image</string>
    <string name="mocked">Ten cuidadínnn no te hagas pupita en el fistro duodenalll</string>
    <string name="mockup_price">28,5 Euros</string>
    <string name="notas_title">Notas</string>
    <string name="add_btn">Añadir</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="selec_table">Seleccione una mesa</string>
    <string name="table">Mesa</string>
    <string name="selec_plate">Seleccione un plato</string>+
    <string name="total">El total es: %s euros</string>
    <string name="total_empty">No hay nada que pagar</string>
    <string name="plate_detail">Detalle del Plato</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="deleted">Plato eliminado</string>
    <string name="added">Plato añadido</string>
    <string name="edited">Plato editado</string>
    <string name="notas_hint">notas</string>
    <string name="anotaciones">Anotaciones</string>
    <string name="pagar">Pagar</string>

</resources>
